--- a/style.css
+++ b/style.css
@@ -137,9 +137,8 @@ html body {
 .logo video {
   position: relative;
   overflow: hidden;
-  width: 1600px;
+  width: 100%;
   height: 950px;
-  margin-left: 60px;
   top: 30px;
   z-index: -10;
 }
